[workspace]
members = [
    "common",
    "basic",
    "hierarchical",
    "pushdown",
    "utility",
    "orthogonal_regions",
    "delayed_transitions",
    "debug_gizmos",
    "debug_overlay",
    "save_load",
    "stress_10k",
    "layered_ai",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-ai-state-machine = { path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
