[package]
name = "saddle-ai-state-machine-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { workspace = true }
bevy_flair = { workspace = true }
bevy_input_focus = { workspace = true }
bevy_ui_widgets = { workspace = true }
saddle-ai-state-machine = { workspace = true }
saddle-pane = { workspace = true }
saddle-bevy-e2e = { workspace = true, optional = true }

[lints]
workspace = true
